crates/chapbook-opds/tests/snapshots/fixtures__acquisition_opds2_counters_and_facets.snap
---
source: crates/chapbook-opds/tests/fixtures.rs
expression: dump(&feed)
---
version: V2
title: New Releases
id: Some("urn:cat:new")
totals: Totals { total_results: Some(120), items_per_page: Some(50), start_index: None, current_page: Some(2) }
link ["self"] -> https://cat.example.com/opds/feed/new?page=2 [application/atom+xml]
link ["start"] -> https://cat.example.com/opds/ [application/atom+xml]
link ["next"] -> https://cat.example.com/opds/feed/new?page=3 [application/atom+xml]
link ["previous"] -> https://cat.example.com/opds/feed/new [application/atom+xml]
link ["search"] -> https://cat.example.com/opds/opensearch.xml [application/opensearchdescription+xml]
link ["http://opds-spec.org/facet"] -> https://cat.example.com/opds/feed/new?lang=en [application/atom+xml] facet-group=Language active=false count=Some(80)
link ["http://opds-spec.org/facet"] -> https://cat.example.com/opds/feed/new?lang=fr [application/atom+xml] facet-group=Language active=false count=Some(40)
link ["http://opds-spec.org/facet"] -> https://cat.example.com/opds/feed/new?fmt=epub [application/atom+xml] facet-group=Format active=false count=Some(100)
entry: The Go Programming Language | id=urn:isbn:9780134190440 authors=["Alan Donovan", "Brian Kernighan"] lang=Some("en") published=Some("2026-01-02T03:04:05Z") series=Some(Series { name: "Professional Computing", position: Some(1.0) })
  ["alternate"] -> https://cat.example.com/opds/publication/gopl
  ["http://opds-spec.org/acquisition/buy"] -> https://cat.example.com/buy/gopl price=39.99 USD indirect=["application/vnd.readium.lcp.license.v1.0+json", "application/epub+zip"]
  ["http://opds-spec.org/acquisition/borrow"] -> https://cat.example.com/borrow/gopl availability=unavailable holds=Some(12) copies=Some(0)
  ["http://opds-spec.org/acquisition/open-access"] -> https://cat.example.com/dl/gopl.epub
  ["http://opds-spec.org/image"] -> https://cat.example.com/covers/gopl.jpg
  [] -> https://cat.example.com/covers/gopl-t.jpg
entry: Demo Series — Chapter 12 | id=urn:example:chapter/demo/c12 authors=["Mangaka Example"] lang=Some("en") published=None series=None
  ["alternate"] -> https://cat.example.com/opds/publication/chapter/demo/c12
  ["http://opds-spec.org/acquisition/open-access"] -> https://cat.example.com/dl/demo/c12.cbz
  ["http://opds-spec.org/acquisition/open-access"] -> https://cat.example.com/dl/demo/c12.epub
  ["http://opds-spec.org/image"] -> https://cat.example.com/dl/demo/cover
