crates/chapbook-opds/tests/snapshots/fixtures__publication_opds2_polymorphism.snap
---
source: crates/chapbook-opds/tests/fixtures.rs
expression: dump(&feed)
---
version: V2
title: The Go Programming Language
id: Some("urn:isbn:9780134190440")
totals: Totals { total_results: None, items_per_page: None, start_index: None, current_page: None }
entry: The Go Programming Language | id=urn:isbn:9780134190440 authors=["Alan Donovan", "Brian Kernighan"] lang=Some("en") published=Some("2026-01-02T03:04:05Z") series=Some(Series { name: "Professional Computing", position: Some(1.0) })
  ["alternate"] -> https://cat.example.com/opds/publication/gopl
  ["http://opds-spec.org/acquisition/buy"] -> https://cat.example.com/buy/gopl price=39.99 USD indirect=["application/vnd.readium.lcp.license.v1.0+json", "application/epub+zip"]
  ["http://opds-spec.org/acquisition/borrow"] -> https://cat.example.com/borrow/gopl availability=unavailable holds=Some(12) copies=Some(0)
  ["http://opds-spec.org/acquisition/open-access"] -> https://cat.example.com/dl/gopl.epub
  ["http://opds-spec.org/image"] -> https://cat.example.com/covers/gopl.jpg
  [] -> https://cat.example.com/covers/gopl-t.jpg
